--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,10 @@ insert_final_newline = true
 max_line_length = 120
 indent_style = space
 
+[*.go]
+indent_size = 4
+tab_width = 4
+
 [*.php]
 indent_size = 4
 tab_width = 4
