feat(count-char): rust pure version
add a pure rust program

--- a/.editorconfig
+++ b/.editorconfig
@@ -50,6 +50,10 @@ tab_width = 2
 indent_size = 2
 tab_width = 2
 
+[*.rs]
+indent_size = 4
+tab_width = 4
+
 [*.scala]
 indent_size = 2
 tab_width = 2
