--- a/.editorconfig
+++ b/.editorconfig
@@ -14,6 +14,10 @@ indent_style = space
 indent_size = 4
 tab_width = 4
 
+[*.cs]
+indent_size = 4
+tab_width = 4
+
 [*.go]
 indent_size = 4
 tab_width = 4
